<!--
  Copyright 2014 Soichiro Kashima

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="app_name">Movie Suggester</string>
    <string name="search_title">Name a Title You Like!</string>
    <string name="btn_back">back</string>
    <string name="btn_search">search</string>
    <string name="item_list_imdb">imdb</string>
    <string name="movie_header_rating">Rating</string>
    <string name="movie_header_votes">Votes</string>
    <string name="actors">Actors:</string>
    <string name="director">Director:</string>
    <string name="writers">Writers:</string>
    <string name="plot">Plot:</string>
    <string name="new_search">New Search</string>
    <string name="type">Type: </string>

    <!--================================================================================-->

    <string name="dialog_sort_rating">Sort By Rating</string>
    <string name="dialog_sort_year">Sort By Year</string>
    <string name="dialog_new_search">New Search</string>
    <string name="dialog_sort_best">Sort By Best Match</string>
    <string name="dialog_go_back">Back To List</string>
    <string name="dialog_watch_trailer">Watch Trailer</string>
    <string name="dialog_save_movie">Add To Watch List</string>
    <string name="dialog_watch_list">My Watch List</string>
    <string name="dialog_got_to_watchlist">- OR - \n Press Here To Watch List</string>
    <string name="dialog_delete_movie_title">Are You Sure You Want To Delete This Movie?</string>
    <string name="dialog_delete_movie_yes">Yes</string>
    <string name="dialog_delete_movie_no">No</string>
    <string name="dialog_watchlist_sort_alpha">Sort By Alphabetical</string>
    <string name="dialog_watchlist_refresh">Refresh</string>
    <string name="dialog_watchlist_sort_date">Sort By Date Added</string>
    <string name="dialog_watch_list_credits">Credits</string>

    <!--================================================================================-->

    <string name="sticy_watch_list">My Watch List</string>

    <!--================================================================================-->

    <string name="credits_txt1">Movie Suggester Powered By:</string>
    <string name="credits_title">Credits</string>
    <string name="credits_tastekid"><a href="https://www.tastekid.com/">tastekid.com</a></string>
    <string name="credits_omdb"><a href="http://www.omdbapi.com/">omdbapi.com</a></string>
    <string name="credits_and">and</string>


</resources>
