<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/credits_title"
        app:titleTextColor="@color/white"
        app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:theme="@style/Toolbar">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward_white_36dp"
            android:foregroundGravity="right"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"/>

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher1"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/credits_txt1"/>

    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/txt1"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/txtTasteKid"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/credits_tastekid"
            android:gravity="right"
            android:textSize="20sp"
            android:autoLink="web"
            android:linksClickable="true"
            android:clickable="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/credits_and"
            android:gravity="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtOmdb"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/credits_omdb"
            android:textSize="20sp"
            android:autoLink="web"
            android:linksClickable="true"
            android:clickable="true"/>

    </LinearLayout>

</RelativeLayout>