<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/accent"
    android:theme="@style/Theme.AppCompat.Dialog">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/dialog_delete_movie_title"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@color/background"
        android:layout_marginBottom="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/background">

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dialog_delete_movie_no"
            android:textColor="@color/white"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dialog_delete_movie_yes"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

</LinearLayout>