<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="1dp">

    <TextView
        android:id="@+id/titleDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/director"
        android:paddingRight="10dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="blalbalabla"
        android:paddingRight="10dp"
        android:textSize="18sp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/titleWriters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/writers"
        android:paddingRight="10dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/writers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="blalbalabla"
        android:paddingRight="10dp"
        android:textSize="18sp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/titleActors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/actors"
        android:paddingRight="10dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/actors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="blalbalabla"
        android:paddingRight="10dp"
        android:textSize="18sp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/titlePlot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/plot"
        android:paddingRight="10dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/plot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="blalbalabla"
        android:paddingRight="10dp"
        android:textSize="18sp"
        android:padding="10dp"/>

</LinearLayout>