<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/background">

    <AutoCompleteTextView
        android:id="@+id/userSearchMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/search_title"
        android:layout_margin="10dp"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btnSearchMovie"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_search"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>


    <LinearLayout
        android:id="@+id/layoutSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtType"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/type"
            android:textSize="19sp"
            android:gravity="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:spinnerMode="dropdown"
            android:layout_marginTop="1dp"/>

    </LinearLayout>
</FrameLayout>