<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="10dp"
    android:theme="@style/MyCustomTheme">


    <LinearLayout
        android:id="@+id/addToWatchList"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_star_white_36dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/txtAdd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_save_movie"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/watchTrailer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_play_circle_outline_white_36dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/txtWatch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_watch_trailer"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/backToList"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_keyboard_backspace_white_36dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/txtBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_go_back"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>