<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/watchList"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_favorite_white_36dp"
            android:background="@android:color/transparent"
            />

        <TextView
            android:id="@+id/txtWatch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_watch_list"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/accent"/>

    <LinearLayout
        android:id="@+id/sortYear"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_sort_white_36dp"
                android:background="@android:color/transparent"
                />

        <TextView
            android:id="@+id/txtYear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_sort_year"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sortRating"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_star_white_36dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/txtRating"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_sort_rating"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
    android:id="@+id/sortBest"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:padding="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_thumb_up_white_36dp"
        android:background="@android:color/transparent"/>

    <TextView
        android:id="@+id/txtBest"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/dialog_sort_best"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/accent"/>


    <LinearLayout
        android:id="@+id/watchSearched"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_info_outline_white_36dp"
            android:background="@android:color/transparent"/>

        <me.grantland.widget.AutofitTextView
            android:id="@+id/descMovie"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="watch xxxx discription"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            autofit:minTextSize="14sp"
            android:maxLines="2"
            android:textColor="@color/white"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/accent"/>


    <LinearLayout
        android:id="@+id/newSearch"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_search_white_36dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/txtSearch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_new_search"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>